# Triangle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-tidy.yml  style.yml
scripts/: fix_style.py
src/: detect.h  game  game.c  game.h  main.c  system.c  system.h
